moving circle reacting to arrow pressing

--- a/snake.html
+++ b/snake.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
-<html lang="cs">
+<html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Had - hra</title>
+  <title>Snake</title>
 </head>
+
 <body>
-<canvas id="game"></canvas>
-<script src="snake.js"></script>
+  <canvas id="game" width="600" height="600" style="background-color:black"></canvas>
+  <script src="snake.js"></script>
+  <script src="game.js"></script>
 </body>
+
 </html>
