--- a/snake.html
+++ b/snake.html
@@ -9,8 +9,9 @@
 </head>
 
 <body>
-  <canvas id="game" width="600" height="600" style="background-color:black"></canvas>
+  <canvas id="canvas" style="background-color:black"></canvas>
   <script src="snake.js"></script>
+  <script src="fruit.js"></script>
   <script src="game.js"></script>
 </body>
 
