--- a/snake.html
+++ b/snake.html
@@ -10,6 +10,7 @@
 
 <body>
   <canvas id="canvas" style="background-color:black"></canvas>
+  <canvas id="canvas2" style="background-color:black"></canvas>
   <script src="snake.js"></script>
   <script src="game.js"></script>
 </body>
