tree class sketch

--- a/snake.html
+++ b/snake.html
@@ -12,6 +12,8 @@
   <canvas id="canvas" style="background-color:black"></canvas>
   <canvas id="canvas2" style="background-color:black"></canvas>
   <script src="snake.js"></script>
+  <script src="binaryTree.js"></script>
+  <script src="ai.js"></script>
   <script src="game.js"></script>
 </body>
 
